external-crates/move/crates/move-compiler/tests/move_check/unit_test/other_failures_invalid_assignment@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:9:24
  │
9 │     #[expected_failure(vector_error=0, location=std::vector)]
  │                        ^^^^^^^^^^^^ Attribute 'vector_error' does not support assignment. Expected 'vector_error' with no arguments

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:13:51
   │
13 │     #[expected_failure(vector_error, minor_status=x"", location=std::vector)]
   │                                                   ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant

error[E02015]: invalid attribute
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:17:24
   │
17 │     #[expected_failure(arithmetic_error=@0, location=n)]
   │                        ^^^^^^^^^^^^^^^^ Attribute 'arithmetic_error' does not support assignment. Expected 'arithmetic_error' with no arguments

error[E02015]: invalid attribute
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:21:24
   │
21 │     #[expected_failure(out_of_gas=bool, location=Self)]
   │                        ^^^^^^^^^^ Attribute 'out_of_gas' does not support assignment. Expected 'out_of_gas' with no arguments

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:25:37
   │
25 │     #[expected_failure(major_status=4004u128, location=Self)]
   │                                     ^^^^^^^^ Expected abort code must be a u64

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:29:56
   │
29 │     #[expected_failure(major_status=4016, minor_status=b"", location=Self)]
   │                                                        ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant
